--- a/ePro/Views/Products/Index.cshtml
+++ b/ePro/Views/Products/Index.cshtml
@@ -83,15 +83,17 @@
             <th>Name</th>
             <th>Description</th>
         </tr>
-        @{ int intcounter = 1;}
-        @{ bool blnFlg = false;}
-
+       
         @foreach (var item in Model.Compliances)
         {
             if(item.ComplianceItem !=null)
                     {
 
                       <tr>
+                          <td>
+
+                            @item.ComplianceitemsID
+                          </td>
                         <td>
                      
                            @item.ComplianceItem.ItemName
@@ -100,70 +102,47 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.Description)
                         </td>
-                         
-                        
-                        <td>
-                           
-                            @if (ViewBag.productcp.Count ==0)
-                            {
-                            @Html.ActionLink("Add Compliance -New entry", "Index", new { compid = item.ComplianceItem.ComplianceItemsID })
-                            }
-                            else
-                            {
-                             int rsetcount = ViewBag.productcp.Count;
-                             for(int c= 1; c< rsetcount; c++)
+                         <td>
+                             @{bool blnflag = true;}
+                             @{int intcounter = 0;}
+                             @foreach (var a in ViewBag.productcp)
                              {
-                                
-                              foreach (var i in ViewBag.productcp)
-                              {
-
-                                 if (i.ComplianceItemsID == item.ComplianceitemsID)
-                                  {
-                                            @Html.ActionLink("Complies - remove?", "Index", new { compid = item.ComplianceItem.ComplianceItemsID })
-                                            @intcounter
-                                            blnFlg = true;
-                                             break;
-                                         }
-                                  else if (i.ComplianceItemsID != item.ComplianceitemsID)
-                                  {
-                                      if (intcounter == item.ComplianceitemsID)
-                                      {
-                                        @Html.ActionLink("Add Compliance", "Index", new { compid = item.ComplianceItem.ComplianceItemsID })
-                                          blnFlg = true;
-                                          break;
-                                      }
+                                 if (a.ComplianceItemsID == item.ComplianceitemsID)
+                                 {
                                      
-                                  }
+                                     if (a.Checked == 1)
+                                     { 
+                                   
+                                       
+                                      @Html.ActionLink("Remove compliance", "Index", new { ComplianceFormID = item.ComplianceFormID, compid = item.ComplianceitemsID })
+                                       blnflag =false;
+                                    
+                                     }
+                                    
+                                     else
+                                     {
+                                        
+                                         intcounter++;
+                                         blnflag = true;
 
+                                     }
+                                 }
 
-
-
-                                 //                if (i.ComplianceItemsID == item.ComplianceitemsID || intcounter % 1==0 )
-                                 //                {
-                                 //                    @intcounter
-                                 //                    @Html.ActionLink("Complies - remove?", "Index", new { compid = item.ComplianceItem.ComplianceItemsID })
-                                 //
-
-                                 //                }
-                                 //                else if (i.ComplianceItemsID != item.ComplianceitemsID || intcounter % 2 == 0)
-                                 //               {
-                                 //                   @intcounter
-                                 //                   @Html.ActionLink("Add Compliance", "Index", new { compid = item.ComplianceItem.ComplianceItemsID })
-
-                                 //                }
-                                 intcounter++;
-                              }
-                              if (blnFlg == true)
-                              {
-                                  blnFlg = false;
-                                  break;
-                              }
                              }
-                            }
+
                          </td>
+                          <td>
+                              @if (@blnflag ==true)
+                              {
+                              @Html.ActionLink("Add compliance", "Index", new { ComplianceFormID = item.ComplianceFormID, compid = item.ComplianceitemsID })
+                              }
+
+                          </td>
+                        
+                        
                     </tr>
                     }
-            //intcounter++;
+           
         }
     </table>
    
